--- a/ui/index.html
+++ b/ui/index.html
@@ -210,7 +210,7 @@
                     <div class="flex flex-row ml-3 mt-10 space-y-0 space-x-4 relative z-20">
                         <button @click="takeOut(selectedCar?.model, selectedCar?.plate)" v-if="activeButton === 'car' && selectedCar" class="bg-[#1A1A1A] bg-opacity-70 text-[#49494A] border border-[#49494A] transition-all duration-500 hover:text-red-400 border hover:border-red-400 px-12 py-3 rounded-md">SPAWN</button>
                         <!-- <button v-if="activeButton === 'car'" class="bg-[#1A1A1A] bg-opacity-70 text-[#49494A] border border-[#49494A] transition-all duration-500 hover:text-red-400 border hover:border-red-400 px-12 py-3 rounded-md">ÁTADÁS</button> -->
-                        <button @click="takeOutImp(selectedCar?.model, selectedCar?.plate)" v-if="activeButton === 'impound && selectedCar'" class="bg-[#1A1A1A] bg-opacity-70 text-red-400 border border-red-400 px-12 py-3 rounded-md">Take out from impounded</button>
+                        <button @click="takeOutImp(selectedCar?.model, selectedCar?.plate)" v-if="activeButton === 'impound' && selectedCar" class="bg-[#1A1A1A] bg-opacity-70 text-red-400 border border-red-400 px-12 py-3 rounded-md">Take out from impounded</button>
                     </div>
                     <div class="mt-8 relative z-20">
                         <div class="flex items-center space-x-2">
